<resources>
    <string name="app_name">androidSivarKorinver</string>
    <string name="prueba">Texto Prueba</string>
    <string name="dateTitle">Fecha de publicación:</string>
    <string name="image_of_data">Image of data</string>
    <string name="author_title">Autor:</string>
    <string name="descriptionTitle">Descripción:</string>
    <string name="contTitle">Contenido:</string>
    <string name="buttonInfo">Ir al sitio web</string>
    <string name="add">Agregar</string>
    <string name="title">Titulo:</string>
    <string name="delete">Borrar</string>
    <string name="update">Actualizar</string>
    <string name="save">Guardar</string>
    <string name="new_article">Nuevo Articulo</string>
    <string name="es">ES</string>
    <string name="en">EN</string>
    <string name="idioma">Idioma:</string>
    <string name="developed_by_jazm_n_romero">Developed by Jazmín Romero</string>
    <string name="anterior">Anterior</string>
    <string name="next">siguiente</string>
    <string name="tasks_header_image_content_description">Task header image</string>
    <string name="Principal">Principal</string>
    <string name="publicaciones">Mis publicaciones</string>
</resources>