<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:id="@+id/card_pertanyaan"
    card_view:cardBackgroundColor="#FFFF"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/aurora"
                    android:scaleType="centerCrop"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/image_of_data" />

                <TextView
                    android:id="@+id/cardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/prueba"
                    android:layout_gravity="bottom"
                    android:background="#8c000000"
                    android:textColor="#ffe3e3e3"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/dateTitle"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:text="@string/dateTitle"
                    android:layout_gravity="bottom"
                    android:textColor="#ffe3e3e3"
                    android:textSize="@dimen/_8sdp"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="normal"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@id/date"
                    card_view:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/prueba"
                    android:layout_gravity="bottom"
                    android:textColor="#ffe3e3e3"
                    android:textSize="@dimen/_8sdp"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="normal"
                    card_view:layout_constraintStart_toEndOf="@id/dateTitle"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

