<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:elevation="0dp"
        android:background="#8c000000"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Imagen del detalle -->
            <ImageView
                android:id="@+id/imgDataDetail"
                android:layout_width="match_parent"
                android:maxHeight="@dimen/_200sdp"
                android:background="@drawable/aurora"
                android:layout_height="@dimen/_200sdp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mainToolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:backgroundTint="#8c000000"
                android:background="#8c000000"
                app:elevation="0dp"
                app:layout_collapseMode="pin"
                android:textAlignment="textStart"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                tools:targetApi="lollipop" >

                <TextView
                    android:id="@+id/titleDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/prueba"
                    android:textColor="@color/colorAccentSecundary"
                    android:gravity="center_vertical"
                    android:layout_gravity="bottom"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"/>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".tarjetasLealtad.TarjetasLealtadVista">


            <TextView
                android:id="@+id/authorTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:text="@string/author_title"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/authorData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/prueba"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/authorTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/dateTitlePubl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/dateTitle"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/authorData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/dateData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/prueba"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/dateTitlePubl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/descriptionTitle"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/dateData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/descriptioData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/prueba"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/contentTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/contTitle"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/descriptioData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/contentData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/prueba"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@id/contentTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btnUrl"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/buttonInfo"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/contentData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
